# mcp-server-malaysia-prayer-time

./: .gitattributes  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  README.md  __init__.py  __main__.py  main.py  malaysia_prayer_time.uvx.json  mcp.py  package.json  pyproject.toml  uvx.json  uvx_plugin.py
.github/workflows/: ci.yml
.run/plugins/uvx/: malaysia_prayer_time.py  setup.py
.run/plugins/uvx/malaysia_prayer_time.egg-info/: PKG-INFO  SOURCES.txt
config/: claude_desktop.yaml
malaysia_prayer_time.egg-info/: PKG-INFO  SOURCES.txt
mcp-server-waktu-solat/: .gitignore  package-lock.json
mcp-server-waktu-solat/src/: index.ts
public/images/: README.md  banner.html  banner.txt
src/: uvx_plugin.py
src/malaysia_prayer_time.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp_server_malaysia_prayer_time.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/waktu_solat/: __init__.py  cache.py  client.py  config.py  models.py  server.py
