[project]
name = "mcp-server-malaysia-prayer-time"
version = "0.2.0"
description = "MCP Server for Malaysia Prayer Times"
authors = [
    {name = "Aman"}
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-server-waktu-solat = "waktu_solat.server:main"
